Se crea nuevo endpoint y se da permisos de cors a todas las ip