@@ -2,7 +2,6 @@ package com.iot.petplate.impl;
 
 import com.iot.petplate.crud.PetScheduleCrud;
 import com.iot.petplate.domain.PetScheduleDomain;
-import com.iot.petplate.dto.PetDTO;
 import com.iot.petplate.dto.PetScheduleDTO;
 import com.iot.petplate.entity.PetScheduleEntity;
 import com.iot.petplate.repository.PetScheduleRepository;
@@ -11,7 +10,6 @@ import org.springframework.stereotype.Repository;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
@@ -20,9 +18,9 @@ public class PetScheduleImpl implements PetScheduleRepository {
     private final PetScheduleCrud petScheduleCrud;
 
     @Override
-    public List<PetScheduleDTO> getAllPetScheduleByPet(PetDTO petDTO) {
-        return petScheduleCrud.findAllByPetId(petDTO.getId()).stream().map(PetScheduleEntity::toDTO)
-                .collect(Collectors.toList());
+    public List<PetScheduleDTO> getAllPetScheduleByPet(Integer petId) {
+        return petScheduleCrud.findAllByPetId(petId).stream().map(PetScheduleEntity::toDTO)
+                .toList();
     }
 
     @Override
@@ -31,13 +29,11 @@ public class PetScheduleImpl implements PetScheduleRepository {
         List<PetScheduleEntity> petScheduleEntities = new ArrayList<>();
         List<PetScheduleDomain> petScheduleDomains = new ArrayList<>();
 
-        petScheduleDomainList.forEach(petSchedule -> {
-            petScheduleEntities.add(new PetScheduleEntity(petSchedule));
-        });
+        petScheduleDomainList.forEach(petSchedule ->
+                petScheduleEntities.add(new PetScheduleEntity(petSchedule)));
 
-        petScheduleCrud.saveAll(petScheduleEntities).forEach(petEntity -> {
-            petScheduleDomains.add(petEntity.toDomain());
-        });
+        petScheduleCrud.saveAll(petScheduleEntities).forEach(petEntity ->
+                petScheduleDomains.add(petEntity.toDomain()));
 
         return petScheduleDomains;
     }
